# web-predict-stock

./: .env.example  .gitignore  AGENTS.md  Makefile  PROPOSAL.md  README.md  SECURITY_UPDATE_REPORT.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml  server.js  webpack.config.js
app/: getStock.js  getStockHistory.js  getStockList.js  insertdb.js  moncreate.js  preprocessStockData.js  proxy_pool.js
backend/: __init__.py  api_models.py  app.py  backtest_service.py  baseline_service.py  data_service.py  database.py  errors.py  feature_engine.py  main.py  market_config.py  model_service.py  protobuf_guard.py  requirements.txt  strategy_service.py  validation_service.py
docs/: decision-register.md  deferred-feature-plan.md  dev.md  implementation-snapshot.md  implementation-status.md  plan.md  project-goals.md  research-spec.md  validation-gates.md
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
scripts/: backtest_smoke.py  crawl_important_events.py  crawl_lifecycle_records.py  crawl_tw_company_profiles.py  crawl_tw_daily_batch.py  dispatch_scheduled_ingestions.py  dispatch_scheduled_recovery_drills.py  market_data_ingestion.py  run_important_event_crawler.py  run_lifecycle_crawler.py  run_scheduled_ingestion.py  run_scheduled_recovery_drills.py  run_tick_p2_acceptance.py  run_tw_company_crawler.py  scraper.py  seed_tick_archive_fixture.py  smoke_backtest.py
src/: app.sass  index.js  index.pug
tests/: conftest.py  test_api_contract.py  test_backtest_service.py  test_baseline_service.py  test_model_service.py  (+5 more)
(+298 files in other folders)
