[project]
name = "quant-platform"
version = "0.1.0"
description = "Personal Quantitative Research Platform"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.18.4",
  "fastapi",
  "pandas",
  "Pygments>=2.20.0",
  "python-multipart",
  "psycopg2-binary",
  "requests",
  "scikit-learn",
  "sqlalchemy",
  "statsmodels",
  "uvicorn[standard]",
  "vectorbt",
  "xgboost",
  "yfinance",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "httpx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
